# csse403

./: .gitignore  .profMakeBackup  BulletExample.elm  ClassOutline.md  ClassOutline.org  Course Policies.docx  README.md  _config.yml  checkout-repos.bash  detailedRaft.org  exampleProlog.pl  foo.txt  how_to_checkout_your_CSSE_403_repo.txt  private.zip.gpg  raftActivity.org  running_tests_notes.txt  runtest.bash
Homework/ElmBreakout/: readme.md
Homework/ElmLineDrawing/: LineDrawing.elm
Homework/ElmModuleExample/: elm-package.json
Homework/ElmMonads/: maybeMonad.elm
Homework/ElmVideoGame/: game.elm
Homework/ErlangLetItCrashExample/: roulette.erl
Homework/ErlangListProbs/: list_probs.erl  listtest.beam  listtest.erl
Homework/ErlangPaxos/: paxos.erl
Homework/ErlangSimpleCommunication/: example.erl  solveme.erl  solvemeSolution.beam
Homework/FinalProject/: FinalProject.docx
Homework/HaskellADTAndTypeclasses/: adt_example.hs  functor_example.hs  readme.md  typeclass_example.hs
Homework/HaskellHighOrder/: highorder.hs
Homework/HaskellPipeMonad/: haskell-PipeMonad.hs
Homework/HaskellPong/: Main.hs  readme.md
Homework/HaskellVideoGame/: readme.md
Homework/LuaCIntegration/: p1.lua  p2.lua
Homework/Rust1/: Cargo.toml  README.md
Homework/Rust1/src/: gradebook.rs  racing.rs
_data/: .~lock.schedule.csv#  assignments.csv  class_days.csv  date_convert.yml  gen_dates.rb  schedule.csv
docs/: CSSE220CAP.md  CSSE220CAR.md  CSSE403CAP.md  CSSE403CAR.md  ClassOutline.md  checking_out_and_submitting.md  course_policies.md  index.md
(+52 files in other folders)
